--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -38,8 +38,10 @@
         android:text="@string/baadshah_coffee_shop"
         android:fontFamily="@font/font_style"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="38sp"
         android:textStyle="bold"
+
+
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.521"
@@ -65,7 +67,7 @@
         android:id="@+id/startBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#6ADF04"
+        android:backgroundTint="@color/orange"
         android:ems="13"
         android:text="get   started"
         android:textAllCaps="true"
