--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
         android:padding="12dp"
         android:hint="Your name"
         android:textColor="@color/black"
+        android:textColorHint="@color/DarkBrown"
         android:ems="13"
         android:textSize="18sp"
         android:inputType="text"
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/white_round_corner_bg"
         android:ems="13"
+        android:textColorHint="@color/DarkBrown"
         android:textColor="@color/black"
         android:hint="Your phone number"
         android:textSize="18sp"
@@ -64,6 +66,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/white_round_corner_bg"
         android:ems="13"
+        android:textColorHint="@color/DarkBrown"
         android:textColor="@color/black"
         android:hint="Your email id"
         android:inputType="text"
@@ -82,6 +85,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/white_round_corner_bg"
         android:ems="13"
+        android:textColorHint="@color/DarkBrown"
         android:textColor="@color/black"
         android:hint="Your address"
         android:inputType="text"
@@ -115,7 +119,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Let's Get Started !"
-        android:textColor="@color/DarkBrown"
+        android:textColor="@color/black"
         android:textSize="50sp"
         android:fontFamily="@font/font_style"
         android:textStyle="bold"
@@ -133,6 +137,7 @@
         android:layout_margin="16dp"
         android:text="Fill in your details to begin your \n journey ."
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
