--- a/app/src/main/res/layout/viewholder_favourite.xml
+++ b/app/src/main/res/layout/viewholder_favourite.xml
@@ -5,23 +5,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/white_background"
+    android:background="@color/lightcream"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
     android:elevation="3dp">
 
-<ImageView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
+
+        android:background="@drawable/white_round_corner_bg"
+        android:layout_marginVertical="0dp"
+
+        android:padding="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+<com.google.android.material.imageview.ShapeableImageView
 android:id="@+id/pic"
-android:layout_width="100dp"
-android:layout_height="100dp"
+    android:layout_width="90dp"
+    android:layout_height="90dp"
+
+    android:scaleType="centerCrop"
 android:layout_marginStart="8dp"
 android:layout_marginTop="8dp"
 android:layout_marginBottom="8dp"
 app:layout_constraintBottom_toBottomOf="parent"
 app:layout_constraintStart_toStartOf="parent"
 app:layout_constraintTop_toTopOf="parent"
+    app:shapeAppearanceOverlay="@style/ciclular"
     tools:srcCompat="@tools:sample/backgrounds/scenic"
     />
 
@@ -67,3 +86,5 @@ app:srcCompat="@drawable/outline_delete_24"
     android:focusable="true"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
