--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
                     android:layout_height="170dp"
                     android:scaleType="fitXY"
 
-
+                    app:shapeAppearanceOverlay="@style/ciclular"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
