--- a/app/src/main/res/layout/viewholder_favourite.xml
+++ b/app/src/main/res/layout/viewholder_favourite.xml
@@ -10,7 +10,9 @@
     android:layout_marginEnd="16dp"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-    android:elevation="3dp">
+    android:elevation="3dp"
+
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
